--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>Kah Wee's Portfolio</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -48,9 +48,40 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <h1>Low Kah Wee</h1>
+            <h2>Data Scientist</h2>
+
+            <div class="social">
+                <ul>
+                    <li>
+                        <a href="https://https://github.com/scarmaten" target="_blank">
+                            <div data="GitHub" class="tooltip">
+                                <i class="fa fa-github" aria-hidden="true"></i>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/kahwee-low/" target="_blank">
+                            <div data="LinkedIn" class="tooltip">
+                                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="mailto:lowkahwee1995@hotmail.com">
+                            <div data="Email" class="tooltip">
+                                <i class="fa fa-envelope" aria-hidden="true"></i>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!-- End #social-content -->
+
+
+            <a href="static/files/kw_resume.pdf" download="KahWee_Resume.pdf" 
+            target="_blank"
+            class="btn-rounded-white">My Resume</a>
         </div>
         <!-- End #lead-content -->
 
